# gtesttest

./: CMakeLists.txt  LICENSE
.github/workflows/: cmake-multi-platform.yml
include/: basic.hpp
src/: main.cpp
src/test/: CMakeLists.txt  gtest_test.cpp
